--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,21 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.0.0"
+  "npmClient": "yarn",
+  "changelog": {
+    "labels": {
+      "pr(enhancement)": ":rocket: Enhancement",
+      "pr(bug)": ":bug: Bug Fix",
+      "pr(documentation)": ":book: Documentation",
+      "pr(dependency)": ":deciduous_tree: Dependency",
+      "pr(chore)": ":turtle: Chore"
+    },
+    "repo": "laixstx/beast",
+    "cacheDir": ".changelog"
+  },
+  "packages": ["packages/*"],
+  "command": {
+    "version": {
+      "exact": true
+    }
+  },
+  "version": "independent"
 }
