--- a/packages/beast-lib/package.json
+++ b/packages/beast-lib/package.json
@@ -44,5 +44,6 @@
     "classnames": "^2.2.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
-  }
+  },
+  "gitHead": "1fada98ea62f75c486bbebe766bb78b6deee865d"
 }
